# git-pip-dev

./: .gitignore  README.md  gh_pages.sh  gh_pip.yaml  pyproject.toml  readme.md  readme_BACKUP.md  requirements.ghp.yaml  tester.ipynb  tester.py
.github/workflows/: ci.yml  install_gh.yml
architecture/: user.md
beta/: README.md  pyproject.toml
beta/src/crimson/git_pip_beta/: install.py  main.py
beta/src/crimson/git_pip_beta/cli_generator/: core.py
beta/src/crimson/git_pip_beta/commands/: README.md  completion.py  install.py  publish.py
beta/src/crimson/git_pip_beta/forms/: config.yaml  conflic_example.ipynb  data_structure.ipynb  get_username.py  get_username.sh  requirements.txt  requirements.yaml  user_view.py
beta/src/crimson/git_pip_beta/github_oauth/: auth_app.ipynb  login.ipynb  login_page.html  main.py  token.enc
beta/src/crimson/git_pip_beta/neon_db/: tester.py
beta/src/crimson/git_pip_beta/pip_plugin/: call_main.py
beta/src/crimson/git_pip_beta/poetry_experiment/: any_args.py
beta/src/crimson/git_pip_beta/scripts/: gen_publish.py  generator.py  index_gen.py  publish.sh.j2
beta/src/crimson/git_pip_beta/scripts/publish/: publish.sh
beta/src/crimson/git_pip_beta/scripts/todos/: todo.general.md  todo.publish.md
beta/src/crimson/git_pip_beta/utils/: versioning.py
beta/src/crimson/git_pip_beta/ventor_test/: client1.py  client2.py
beta/src/crimson/git_pip_beta/ventor_test/module/: core.py
beta/src/crimson/git_pip_beta/ventor_test/module_2/: core.py
beta/test/: test_platform.py
development/: config.ipynb  initial.ipynb
development/old_src/: completion.py  git_operations.py  main.py  wrapper.py
notebooks/: args_editor.ipynb  generated_parser.ipynb  initial.ipynb  neon_db.ipynb  neon_db_read_only.ipynb  package.ipynb  pypi_version_loader.ipynb  tester.ipynb  versioning.ipynb
notebooks/neon/: user_name.ipynb
prerelease/src/gh_pip_rc/command/: core.py
prerelease/src/gh_pip_rc/config/: core.py
prerelease/src/gh_pip_rc/functions/: core.py  path.py  utils.py
scripts/workflows/: ci.sh  control_test_branch.sh  setup_gh.sh
simple/dev/: index.html
simple/dev/crimson-git-pip-beta/: index.html
some_notes/develop_api_autopublish/: readme.md
some_notes/develop_auto_publish/: readme.md
some_notes/develop_automation/: readme.md
some_notes/develop_completion/: readme.md  team_manager.py  team_manager2.py
some_notes/develop_frontend/: readme.md
some_notes/develop_order/: readme.md
