[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-git-pip-beta"
version = "0.1.2"
description = "Your package description."
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

dependencies = [
    
]
requires-python = ">=3.9"

[project.scripts]
git-pip-beta = "crimson.git_pip_beta.main:main"


[project.urls]
"Homepage" = "https://github.com/crimson206/git-pip"
"Bug Tracker" = "https://github.com/crimson206/git-pip/issues"
