[project]
name = "crimson-git-pip-beta"
version = "0.1.3a1"
description = "Your package description."
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

dependencies = [
    "tomli-w (>=1.2.0,<2.0.0)"
    
]
requires-python = ">=3.9,<4.0"

[project.scripts]
git-pip-beta = "crimson.git_pip_beta.main:main"


[project.urls]
"Homepage" = "https://github.com/crimson206/git-pip"
"Bug Tracker" = "https://github.com/crimson206/git-pip/issues"

[tool.poetry]
packages = [
  { include = "crimson", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
